Pascal/test/cohadar/pascal/errors/bad_operands_equality.pas
program test;
var a, b: boolean;

begin
	a := (2 <> b);
end.